--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.NoActionBar"
-            tools:replace="android:icon" android:screenOrientation="portrait">
+            tools:replace="android:icon" android:screenOrientation="portrait" tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".ui.activity.CharacterActivity" android:screenOrientation="portrait">
         </activity>
         <activity android:name=".ui.activity.SplashActivity" android:screenOrientation="portrait">
@@ -32,6 +32,33 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
+
+
+        <service android:name=".network.messaging.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
+
+
+    <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
+     See README(https://goo.gl/l4GJaQ) for more. -->
+    <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/notification_icon"/>
+    <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+         notification message. See README(https://goo.gl/6BKBk7) for more. -->
+    <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/alive_color"/>
+
+    <meta-data
+            android:name="firebase_messaging_auto_init_enabled"
+            android:value="false"/>
+    <meta-data
+            android:name="firebase_analytics_collection_enabled"
+            android:value="false"/>
 
 </manifest>
