--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,11 @@
 
     </application>
 
+
+    <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_notification"/>
+
     <meta-data
             android:name="firebase_messaging_auto_init_enabled"
             android:value="false"/>
