--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-crash:16.2.1'
-    implementation 'com.google.firebase:firebase-messaging:17.4.0'
+    implementation 'com.google.firebase:firebase-messaging:17.5.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
     testİmplementation 'junit:junit:4.12'
     androidTestİmplementation 'androidx.test:runner:1.1.0-alpha4'
@@ -45,4 +45,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'androidx.cardview:cardview:1.0.0-beta01'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.1.0'
+    implementation 'com.google.android.gms:play-services-ads:17.2.0'
 }
