--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,50 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <!--
+ Set custom default icon. This is used when no icon is set for incoming notification messages.
+    See README(https://goo.gl/l4GJaQ) for more.
+    -->
+    <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_notification"/>
+    <!--
+ Set color used with incoming notification messages. This is used when no color is set for the incoming
+         notification message. See README(https://goo.gl/6BKBk7) for more.
+    -->
+    <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/alive_color"/>
+    <meta-data
+            android:name="firebase_messaging_auto_init_enabled"
+            android:value="false"/>
+    <meta-data
+            android:name="firebase_analytics_collection_enabled"
+            android:value="false"/>
 
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
+            android:screenOrientation="portrait"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.NoActionBar"
-            tools:replace="android:icon" android:screenOrientation="portrait" tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activity.CharacterActivity" android:screenOrientation="portrait">
+            tools:ignore="GoogleAppIndexingWarning"
+            tools:replace="android:icon">
+        <activity android:name=".ui.activity.EpisodeActivity"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".ui.activity.SplashActivity" android:screenOrientation="portrait">
+        <activity android:name=".ui.activity.PolicyActivity"
+                  android:screenOrientation="portrait">
+        </activity>
+        <activity
+                android:name=".ui.activity.CharacterActivity"
+                android:screenOrientation="portrait">
+        </activity>
+        <activity
+                android:name=".ui.activity.SplashActivity"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -42,27 +74,6 @@
         <meta-data
                 android:name="com.google.android.gms.ads.APPLICATION_ID"
                 android:value="ca-app-pub-1757058856747719~8412082886"/>
-
     </application>
-
-
-    <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
-    See README(https://goo.gl/l4GJaQ) for more. -->
-    <meta-data
-            android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@mipmap/notification_icon"/>
-    <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
-         notification message. See README(https://goo.gl/6BKBk7) for more. -->
-    <meta-data
-            android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@color/alive_color"/>
-
-
-    <meta-data
-            android:name="firebase_messaging_auto_init_enabled"
-            android:value="false"/>
-    <meta-data
-            android:name="firebase_analytics_collection_enabled"
-            android:value="false"/>
 
 </manifest>
