--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,35 +13,57 @@ def getDateTime() {
     return df.format(new Date())
 }
 
-def isTestMode = false
+def isTestMode = true
 
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.burakekmen.rickandmortyguide"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 28
-        versionCode 7
-        versionName "1.1.5"
+        versionCode 29
+        versionName "1.3.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        multiDexEnabled true
+        manifestPlaceholders = [adAppId: "ca-app-pub-1757058856747719~8412082886"]
     }
     buildTypes {
         debug {
             if (isTestMode) {
                 buildConfigField "Boolean", "IS_TEST_MODE", "true"
-
+                buildConfigField "String", "YOUTUBE_API_KEY", "\"AIzaSyDEOOhnDithKXGo7OdJCQCxZlb8u81_aBU\""
+                buildConfigField "String", "YOUTUBE_API_URL", "\"https://www.googleapis.com/youtube/v3/\""
+                buildConfigField "String", "API_BASE_URL", "\"https://rickandmortyapi.com/api/\""
+                buildConfigField "String", "PRIVACY_POLICY_URL", "\"http://gurmeapp.xyz/privacy_policy.html\""
+                buildConfigField "String", "GIPHY_API_KEY", "\"Cb3k2zOhaWFG6E7noZRCSeNl1WztxnfC\""
             } else {
                 buildConfigField "Boolean", "IS_TEST_MODE", "true"
+                buildConfigField "String", "YOUTUBE_API_KEY", "\"AIzaSyDEOOhnDithKXGo7OdJCQCxZlb8u81_aBU\""
+                buildConfigField "String", "YOUTUBE_API_URL", "\"https://www.googleapis.com/youtube/v3/\""
+                buildConfigField "String", "API_BASE_URL", "\"https://rickandmortyapi.com/api/\""
+                buildConfigField "String", "PRIVACY_POLICY_URL", "\"http://gurmeapp.xyz/privacy_policy.html\""
+                buildConfigField "String", "GIPHY_API_KEY", "\"Cb3k2zOhaWFG6E7noZRCSeNl1WztxnfC\""
             }
         }
         release {
             if (isTestMode) {
                 buildConfigField "Boolean", "IS_TEST_MODE", "true"
+                buildConfigField "String", "YOUTUBE_API_KEY", "\"AIzaSyDEOOhnDithKXGo7OdJCQCxZlb8u81_aBU\""
+                buildConfigField "String", "YOUTUBE_API_URL", "\"https://www.googleapis.com/youtube/v3/\""
+                buildConfigField "String", "API_BASE_URL", "\"https://rickandmortyapi.com/api/\""
+                buildConfigField "String", "PRIVACY_POLICY_URL", "\"http://gurmeapp.xyz/privacy_policy.html\""
+                buildConfigField "String", "GIPHY_API_KEY", "\"Cb3k2zOhaWFG6E7noZRCSeNl1WztxnfC\""
                 minifyEnabled false
                 proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             } else {
                 buildConfigField "Boolean", "IS_TEST_MODE", "false"
+                buildConfigField "String", "YOUTUBE_API_KEY", "\"AIzaSyDEOOhnDithKXGo7OdJCQCxZlb8u81_aBU\""
+                buildConfigField "String", "YOUTUBE_API_URL", "\"https://www.googleapis.com/youtube/v3/\""
+                buildConfigField "String", "API_BASE_URL", "\"https://rickandmortyapi.com/api/\""
+                buildConfigField "String", "PRIVACY_POLICY_URL", "\"http://gurmeapp.xyz/privacy_policy.html\""
+                buildConfigField "String", "GIPHY_API_KEY", "\"Cb3k2zOhaWFG6E7noZRCSeNl1WztxnfC\""
                 minifyEnabled false
                 proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             }
@@ -67,23 +89,24 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //noinspection GradleCompatible
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0-beta01'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-crash:16.2.1'
-    implementation 'com.google.firebase:firebase-messaging:17.5.0'
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
     testİmplementation 'junit:junit:4.12'
-    androidTestİmplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestİmplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestİmplementation 'androidx.test:runner:1.2.0-alpha04'
+    androidTestİmplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha04'
     implementation 'com.github.f0ris.sweetalert:library:1.5.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'androidx.cardview:cardview:1.0.0-beta01'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.1.0'
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
 }
